@@ -35,6 +35,9 @@ Bug Fixes
 * SOLR-7361: Slow loading SolrCores should not hold up all other SolrCores that have finished loading from serving
   requests. (Mark Miller, Timothy Potter, Ramkumar Aiyengar)
 
+* SOLR-7610: Fix VelocityResponseWriter's $resource.locale to accurately report locale in use.
+  (ehatcher)
+
 Optimizations
 ----------------------
 (no changes)
@@ -48,6 +51,7 @@ Other Changes
   (Vamsee Yarlagadda via shalin)
 
 * SOLR-7590: Finish and improve MDC context logging support. (Mark Miller)  
+
 
 ==================  5.2.0 ==================
 
